# flaskr_ld

./: pyproject.toml
.github/workflows/: python-app.yml
flaskr_ld/: __init__.py  auth.py  blog.py
flaskr_ld/templates/blog/: create.html
requirements/: common.txt  dev.txt
tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
