[project]
name = "flaskr-ld"
version = "1.0.8"
description = "The basic blog app built in the Flask tutorial, with a LauchDarkly feature flag for creating new posts."
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flaskr_ld"]
